--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1370,7 +1370,7 @@ fr:
         yes_no: oui/non
         required: obligatoire
         advisable: recommandé
-        optionnal: optionnel
+        optional: optionnel
         deprecated: déprécié
       not_csv: Le fichier importé n'est pas au format CSV
       empty_file: ne contient aucune donnée
@@ -2306,7 +2306,7 @@ fr:
         float: '0,123'
         required: obligatoire
         advisable: recommandé
-        optionnal: optionnel
+        optional: optionnel
   products:
     menu:
       products: Produits
@@ -2418,7 +2418,7 @@ fr:
         yes_no: oui/non
         required: obligatoire
         advisable: recommandé
-        optionnal: optionnel
+        optional: optionnel
         deprecated: déprécié
     form:
       max_distance:
